--- a/build-tools/build-docker-images/stx-centos/Dockerfile.master
+++ b/build-tools/build-docker-images/stx-centos/Dockerfile.master
@@ -5,6 +5,7 @@ ARG RELEASE=7.5.1804
 FROM centos:${RELEASE}
 
 RUN set -ex ;\
+    sed -i '/\[main\]/ atimeout=120' /etc/yum.conf ;\
     yum install -y centos-release-openstack-rocky ;\
     rm -rf \
         /var/log/* \
